--- a/app/src/main/res/layout/activity_sheet_ae.xml
+++ b/app/src/main/res/layout/activity_sheet_ae.xml
@@ -94,6 +94,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="90dp"
+        android:visibility="invisible"
 
         />
 
@@ -103,7 +104,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="90dp" />
+        android:translationY="90dp"
+        android:visibility="invisible"/>
 
     // Columna de Respuestas
 
@@ -210,6 +212,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="242dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
@@ -219,6 +222,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="242dp"
+        android:visibility="invisible"
         />
 
     // 2º Intento
@@ -266,21 +270,23 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton45"
+        android:id="@+id/imageButton44"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="332dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
-        android:id="@+id/imageButton46"
+        android:id="@+id/imageButton45"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="332dp"
+        android:visibility="invisible"
         />
 
     // 3º intento
@@ -327,21 +333,23 @@
         app:srcCompat="@drawable/png2" />
 
     <ImageButton
-        android:id="@+id/imageButton47"
+        android:id="@+id/imageButton46"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="423dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
-        android:id="@+id/imageButton48"
+        android:id="@+id/imageButton47"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="423dp"
+        android:visibility="invisible"
          />
 
     // 4º Intento
@@ -387,21 +395,23 @@
         app:srcCompat="@drawable/png4" />
 
     <ImageButton
-        android:id="@+id/imageButton49"
+        android:id="@+id/imageButton48"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="515dp"
+        android:visibility="invisible"
        />
 
     <ImageButton
-        android:id="@+id/imageButton50"
+        android:id="@+id/imageButton49"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="515dp"
+        android:visibility="invisible"
         />
 
     // 5º Intento
@@ -447,21 +457,23 @@
         app:srcCompat="@drawable/png3" />
 
     <ImageButton
-        android:id="@+id/imageButton52"
+        android:id="@+id/imageButton50"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="610dp"
+        android:visibility="invisible"
          />
 
     <ImageButton
-        android:id="@+id/imageButton53"
+        android:id="@+id/imageButton51"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="610dp"
+        android:visibility="invisible"
         />
 
     // Iniciar la prueba
