--- a/app/src/main/res/layout/activity_sheet_uz.xml
+++ b/app/src/main/res/layout/activity_sheet_uz.xml
@@ -96,6 +96,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="90dp"
+        android:visibility="invisible"
 
         />
 
@@ -105,7 +106,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="90dp" />
+        android:translationY="90dp"
+        android:visibility="invisible"/>
 
     // Columna de Respuestas
 
@@ -218,6 +220,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="242dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
@@ -227,6 +230,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="242dp"
+        android:visibility="invisible"
         />
 
     // 2º Intento
@@ -280,6 +284,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="332dp"
+        android:visibility="invisible"
         />
     <ImageButton
         android:id="@+id/imageButton45"
@@ -288,6 +293,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="332dp"
+        android:visibility="invisible"
         />
 
     // 3º intento
@@ -344,6 +350,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="423dp"
+        android:visibility="invisible"
         />
     <ImageButton
         android:id="@+id/imageButton47"
@@ -352,6 +359,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="423dp"
+        android:visibility="invisible"
         />
 
     // 4º Intento
@@ -407,6 +415,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="515dp"
+        android:visibility="invisible"
         />
     <ImageButton
         android:id="@+id/imageButton49"
@@ -415,6 +424,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="515dp"
+        android:visibility="invisible"
         />
 
     // 5º Intento
@@ -469,6 +479,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="610dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
@@ -478,6 +489,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="610dp"
+        android:visibility="invisible"
         />
 
     // Iniciar la prueba
