--- a/app/src/main/res/layout/activity_sheet_ko.xml
+++ b/app/src/main/res/layout/activity_sheet_ko.xml
@@ -86,6 +86,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="90dp"
+        android:visibility="invisible"
 
         />
 
@@ -95,7 +96,9 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="90dp" />
+        android:translationY="90dp"
+        android:visibility="invisible"
+        />
 
 
     // Columna de Respuestas
@@ -201,7 +204,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
-        android:translationY="242dp" />
+        android:translationY="242dp"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/imageButton43"
@@ -209,7 +213,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="242dp" />
+        android:translationY="242dp"
+        android:visibility="invisible"/>
 
     // 2º Intento
 
@@ -219,7 +224,8 @@
         android:layout_height="wrap_content"
         android:translationX="370dp"
         android:translationY="325dp"
-        app:srcCompat="@drawable/png13" />
+        app:srcCompat="@drawable/png13"
+        />
     />
 
     <ImageButton
@@ -262,7 +268,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="332dp" />
+        android:translationY="332dp"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/imageButton45"
@@ -270,7 +277,9 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
-        android:translationY="332dp" />
+        android:translationY="332dp"
+        android:visibility="invisible"
+        />
 
     // 3º intento
 
@@ -322,7 +331,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="423dp" />
+        android:translationY="423dp"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/imageButton47"
@@ -330,7 +340,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
-        android:translationY="423dp" />
+        android:translationY="423dp"
+        android:visibility="invisible"/>
 
     // 4º Intento
 
@@ -380,7 +391,9 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="515dp" />
+        android:translationY="515dp"
+        android:visibility="invisible"
+        />
 
     <ImageButton
         android:id="@+id/imageButton49"
@@ -388,7 +401,9 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
-        android:translationY="515dp" />
+        android:translationY="515dp"
+        android:visibility="invisible"
+        />
 
     // 5º Intento
 
@@ -438,7 +453,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="610dp" />
+        android:translationY="610dp"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/imageButton51"
@@ -446,7 +462,9 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
-        android:translationY="610dp" />
+        android:translationY="610dp"
+        android:visibility="invisible"
+        />
 
     // Iniciar la prueba
 
