--- a/app/src/main/res/layout/activity_sheet_punctuation_symbols.xml
+++ b/app/src/main/res/layout/activity_sheet_punctuation_symbols.xml
@@ -87,6 +87,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="90dp"
+        android:visibility="invisible"
 
         />
 
@@ -96,7 +97,8 @@
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
-        android:translationY="90dp" />
+        android:translationY="90dp"
+        android:visibility="invisible"/>
 
 
     // Columna de Respuestas
@@ -203,6 +205,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="242dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
@@ -212,6 +215,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="242dp"
+        android:visibility="invisible"
         />
 
     // 2º Intento
@@ -265,6 +269,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="332dp"
+        android:visibility="invisible"
         />
     <ImageButton
         android:id="@+id/imageButton45"
@@ -273,6 +278,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="332dp"
+        android:visibility="invisible"
         />
 
     // 3º intento
@@ -329,6 +335,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="423dp"
+        android:visibility="invisible"
         />
     <ImageButton
         android:id="@+id/imageButton47"
@@ -337,6 +344,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="423dp"
+        android:visibility="invisible"
         />
 
     // 4º Intento
@@ -392,6 +400,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="515dp"
+        android:visibility="invisible"
         />
     <ImageButton
         android:id="@+id/imageButton49"
@@ -400,6 +409,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="515dp"
+        android:visibility="invisible"
         />
 
     // 5º Intento
@@ -454,6 +464,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="940dp"
         android:translationY="610dp"
+        android:visibility="invisible"
         />
 
     <ImageButton
@@ -463,6 +474,7 @@
         android:background="@android:drawable/presence_online"
         android:translationX="310dp"
         android:translationY="610dp"
+        android:visibility="invisible"
         />
 
     // Iniciar la prueba
